add_subdirectory(utils)
if (BUILD_ENGINE)
  add_subdirectory(storages)
  add_subdirectory(engines)
endif()

if (BUILD_COMPILER)
    add_subdirectory(compiler)
    if (BUILD_ENGINE)
      add_subdirectory(main)
    endif()
endif()
add_subdirectory(server)

if (BUILD_ALL_IN_ONE)
        message(STATUS "Compiler libraries: ${COMPILER_LIBRARIES}")
        add_library(neug_libraries SHARED ${ALL_OBJECT_FILES})
        target_link_libraries(neug_libraries PUBLIC ${COMPILER_LIBRARIES} ${GLOG_LIBRARIES} ${Boost_LIBRARIES} ${Protobuf_LIBRARIES} ${YAML_CPP_LIBRARIES} ${ARROW_LIB} neug_grape_lite)
        if (BUILD_HTTP_SERVER)
            target_link_libraries(neug_libraries PUBLIC neug_graph_db_service ${GFLAGS_LIBRARIES} ${GLOG_LIBRARIES} ${Protobuf_LIBRARIES}  ${Boost_LIBRARIES})
            target_link_libraries(neug_libraries PUBLIC ${OPENSSL_LIBRARIES} ${CRYPTO_LIB} ${BRPC_LIB} ${LEVELDB_LIB}) #${PROTOC_LIB}
        endif()
        if (APPLE)
            target_link_libraries(neug_libraries PUBLIC ${MACOS_DYLIBS})
        endif()
        target_link_libraries(neug_libraries PUBLIC mimalloc)
        target_include_directories(neug_libraries PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/compiler>
            $<INSTALL_INTERFACE:include/neug/compiler>)
        install_neug_target(neug_libraries)
        if (ENABLE_BACKTRACES)
            target_link_libraries(neug_libraries PUBLIC cpptrace::cpptrace)
        endif()
endif()
